2013-10-16 Miguel de Dios <miguel.dedios@artica.es>

	* include/api.php: checking the update manager, sorry.

2013-10-16 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php,
	include/functions_network_components.php,
	include/functions_alerts.php: fixed the name of items to duplicate,
	now they have a html entities for whitespaces.

2013-10-16  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.js
	include/functions_config.php: Changed license warning window
	time to 30 seconds. Added header warning message when license 
	is expired in client mode

2013-10-16 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/massive/massive_delete_modules.php,
	include/functions_modules.php: fixed the delete modules with
	conf from the massive operations.

2013-10-16 Miguel de Dios <miguel.dedios@artica.es>

	* pandoradb_data.sql,
	extensions/update_manager/sql/update_manager.sql,
	extensions/update_manager/sql/update_manager.postgreSQL.sql,
	extensions/update_manager/sql/update_manager.oracle.sql,
	extensions/system_info.php, pandoradb.data.postgreSQL.sql,
	pandoradb.data.oracle.sql, extras/pandora_diag.php: removed the
	unused path to keygen.

2013-10-16  Sergio Martin <sergio.martin@artica.es>

	* ChangeLog: Commit last commit missed ChangeLog

2013-10-16  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	images/login_background.jpg
	images/login_background.png: Change login screen background
	image

2013-10-16  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.1_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.1_to_5.0.oracle.sql,
	  extras/pandoradb_migrate_4.1_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Removed some queries
	  that were re-introduced in revision 8897.

2013-10-16  Junichi Satoh  <junichi@rworks.jp>
